# frl-benchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: byz_afedpg_30pct.toml  byz_fedpg_30pct.toml  byz_svrpg_30pct.toml  cartpole_adaptive.toml  cartpole_adaptive_high_threshold.toml  compare_centralized.toml  compare_fedpg.toml  compare_independent.toml  paper_cartpole.toml  paper_cartpole_svrpg.toml  paper_halfcheetah.toml  paper_lunarlander.toml  paper_lunarlander_gpomdp.toml  pursuit_afedpg.toml  pursuit_byz_afedpg_30pct.toml  pursuit_byz_fedpg_30pct.toml  pursuit_centralized.toml  pursuit_fedpg.toml  pursuit_independent.toml
frl_benchmark/: __init__.py  client_app.py  config.py  deploy_client.py  deploy_server.py  policy.py  run_training.py  server_app.py
frl_benchmark/core/: __init__.py  attacks.py  byzantine.py  gradient.py  trajectory.py
frl_benchmark/dashboard/: __init__.py  app.py
frl_benchmark/dashboard/templates/: experiment.html
frl_benchmark/envs/: __init__.py  pettingzoo_wrapper.py
frl_benchmark/flower/: __init__.py  worker.py
frl_benchmark/strategies/: __init__.py  base.py  centralized.py  example_strategy.py  fedpg_br_strategy.py  gpomdp.py  independent.py  my_strategy.py  svrpg.py
